fixing input on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -286,6 +286,9 @@ input {
   }
   input{
   width:100%;  
+  margin: 0 auto; 
+  padding: 0;
+  
   }
   .submit_button{
     margin: 0 auto;
@@ -308,7 +311,7 @@ input {
     margin: 0;
     padding: 0;
     }
-    form {
-      font-size: 40%;
+  form {
+      font-size: 60%;
     }
 }
